Added navbar and multi-authentication

--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
   <link rel="manifest" href="/static/favicon/site.webmanifest"></head>
 <body>
+  {navBarHTML}
   <div class="section">
     <div class="container">
       <h1 class="section-heading">
@@ -93,7 +94,7 @@
   <!-- <p>Query = {query}</p>
   <p>Mounts = {mounts}</p>
   <p>Input = {input}</p>
-  <p>Path = {path}</p>
-  <p>environ = {environ}</p> -->
+  <p>Path = {path}</p> -->
+  <!-- <p>remoteUser = {remoteUser}</p> -->
 </body>
 </html>
