--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -25,6 +25,7 @@
       }}
     </script>
     <body>
+      {navBarHTML}
       <div class="section">
         <div class="container">
           <h1>Job Progress</h1>
@@ -33,6 +34,9 @@
           <h4>Job info:</h3>
           <div class="row">
             <div class="three columns">Description: </div><div class="nine columns"><strong>{jobName}</strong></div>
+          </div>
+          <div class="row">
+            <div class="three columns">Owner: </div><div class="nine columns"><strong>{owner}</strong></div>
           </div>
           <div class="row">
             <progress class="twelve columns" id="percentDone" value="{percentComplete}" max="100">{percentComplete} %</progress>
