--- a/Error.html
+++ b/Error.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
     <link rel="manifest" href="/static/favicon/site.webmanifest">  </head>
 <body>
+  {navBarHTML}
   <div class="section">
     <div class="container">
       <h1>
