--- a/ServerManagement.html
+++ b/ServerManagement.html
@@ -29,6 +29,7 @@
     </script>
   </head>
   <body>
+    {navBarHTML}
     <div class="section">
       <div class="container">
         <h1>Server Management</h1>
