--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -88,7 +88,7 @@
             <input class="one column" style="width: 20px; height: 20px;" type="checkbox" id="reloadCheckbox" name="reloadCheckbox" checked>
           </div>
           <div class="row">
-            <form action="/cancelJob/{jobNum}" onsubmit="return confirmTerminate()">
+            <form action="/cancelJob/{jobNum}" onsubmit="return confirmTerminate();">
                 <input class="button" type="submit" value="Terminate Job" />
             </form>
           </div>
