--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
     <link rel="manifest" href="/static/favicon/site.webmanifest">  </head>
     <script>
+      var reloaderID;
       if (!{processDead}) {{
         var reloadInterval = 5000;
         var reloaderID = window.setInterval(reloader, reloadInterval);
@@ -20,6 +21,10 @@
       }}
 
       function confirmTerminate() {{
+        if (!(reloaderID == null)) {{
+          document.getElementById("reloadCheckbox").checked = false;
+          clearInterval(reloaderID);
+        }}
         var reallyTerminate = confirm("Are you sure you want to terminate this job? Completed masks will remain. Click 'Ok' to terminate, 'Cancel' to allow job to continue.")
         return reallyTerminate;
       }}
