--- a/FinalizeJob.html
+++ b/FinalizeJob.html
@@ -29,7 +29,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="three columns">Job description:</div><div class="nine columns">{jobName} </div>
+          <div class="three columns">Job description:</div><div class="nine columns"><strong>{jobName}</strong></div>
         </div>
         <div class="row">
           <details class="twelve columns">
@@ -40,22 +40,22 @@
           </details>
         </div>
         <div class="row">
-          <div class="three columns">Chosen top neural network:</div><div class="nine columns">{topNetworkName} </div>
+          <div class="three columns">Chosen top neural network:</div><div class="nine columns"><strong>{topNetworkName}</strong></div>
         </div>
         <div class="row">
-          <div class="three columns">Chosen bottom neural network:</div><div class="nine columns">{botNetworkName} </div>
+          <div class="three columns">Chosen bottom neural network:</div><div class="nine columns"><strong>{botNetworkName}</strong></div>
         </div>
         <div class="row">
-          <div class="three columns">Top mask vertical offset:</div><div class="nine columns">{topOffset} </div>
+          <div class="three columns">Top mask vertical offset:</div><div class="nine columns"><strong>{topOffset}</strong></div>
         </div>
         <div class="row">
-          <div class="three columns">Top mask height:</div><div class="nine columns">{topHeight} </div>
+          <div class="three columns">Top mask height:</div><div class="nine columns"><strong>{topHeight}</strong></div>
         </div>
         <div class="row">
-          <div class="three columns">Bottom mask height:</div><div class="nine columns">{botHeight} </div>
+          <div class="three columns">Bottom mask height:</div><div class="nine columns"><strong>{botHeight}</strong></div>
         </div>
         <div class="row">
-          <div class="three columns">Binary mask threshold:</div><div class="nine columns">{binaryThreshold} </div>
+          <div class="three columns">Binary mask threshold:</div><div class="nine columns"><strong>{binaryThreshold}</strong></div>
         </div>
         <form action="/confirmJob/{jobID}">
             <input class="twelve columns button button-primary" type="submit" value="Confirm and enqueue job" />
