--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,7 @@
   </div>
   <div class="section">
     <div class="container">
+      <h2>Create new job:</h2>
       <form action="/finalizeJob" method="POST">
         <div class="row">
           <label class="three columns" for="jobName">Job name/description:</label>
