Re-labeled root mount point field

--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
           <input class="nine columns" type="text" id="jobName" name="jobName" value="My job">
         </div>
         <div class="row">
-          <label class="three columns" for="rootMountPoint">Video root mount point:</label>
+          <label class="three columns" for="rootMountPoint">Root mount point:</label>
           <select class="nine columns" name="rootMountPoint" id="rootMountPoint">
           {mopts}
           </select>
