Added back botHeight and topHeight as optional parameters, and added generatePreview parameter to specify if gif preview should be created

--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -83,7 +83,16 @@
                 <div class="three columns">Top mask vertical offset:</div><div class="nine columns"><strong>{topOffset}</strong></div>
               </div>
               <div class="row">
+                <div class="three columns">Top mask height:</div><div class="nine columns"><strong>{topHeight}</strong></div>
+              </div>
+              <div class="row">
+                <div class="three columns">Bottom mask height:</div><div class="nine columns"><strong>{botHeight}</strong></div>
+              </div>
+              <div class="row">
                 <div class="three columns">Binary mask threshold:</div><div class="nine columns"><strong>{binaryThreshold}</strong></div>
+              </div>
+              <div class="row">
+                <div class="three columns">Generate preview:</div><div class="nine columns"><strong>{generatePreview}</strong></div>
               </div>
               <div class="row">
                 <div class="three columns">Job state: </div><div class="nine columns"><strong>{jobStateName}</strong></div>
