--- a/Index.html
+++ b/Index.html
@@ -72,8 +72,20 @@
           <input class="two columns" type="number" id="topOffset" name="topOffset" min="0" step="1" value="0">
         </div>
         <div class="row">
+          <label class="three columns" for="topHeight">Top mask height:</label>
+          <input class="two columns" type="number" id="topHeight" name="topHeight" min="0" step="1" value="">
+        </div>
+        <div class="row">
+          <label class="three columns" for="botHeight">Bottom mask height:</label>
+          <input class="two columns" type="number" id="botHeight" name="botHeight" min="0" step="1" value="">
+        </div>
+        <div class="row">
           <label class="three columns" for="binaryThreshold">Binary Threshold:</label>
           <input class="two columns" type="number" id="binaryThreshold" name="binaryThreshold" min="0" max="1" step="0.001" value="0.3">
+        </div>
+        <div class="row">
+          <label for="generatePreview">Generate mask previews:</label>
+          <input type="checkbox" id="generatePreview" name="generatePreview" checked>
         </div>
         <input class="button button-primary u-full-width" type="submit" value="Initialize job">
       </form>
