--- a/ServerManagement.html
+++ b/ServerManagement.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
     <link rel="manifest" href="/static/favicon/site.webmanifest">
     <script>
-      var reloadInterval = 5000;
+      var reloadInterval = {autoReloadInterval};
       var reloaderID = window.setInterval(reloader, reloadInterval);
       function reloader() {{
         if (document.getElementById("reloadCheckbox").checked) {{
