--- a/FinalizeJob.html
+++ b/FinalizeJob.html
@@ -61,9 +61,14 @@
         <div class="row">
           <div class="three columns">Generate mask previews:</div><div class="nine columns"><strong>{generatePreview}</strong></div>
         </div>
-        <form action="/confirmJob/{jobID}">
-            <input class="twelve columns button button-primary" type="submit" value="Confirm and enqueue job" />
-        </form>
+        <div class="row">
+          <form action="/confirmJob/{jobID}">
+              <input class="six columns button button-primary" type="submit" value="Confirm and enqueue job" />
+          </form>
+          <form action="/cancelJob/{jobID}">
+              <input class="six columns button button" type="submit" value="Cancel job" />
+          </form>
+        </div>
       </div>
     </div>
   </body>
