Hide preview if preview is not set to be generated

--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -121,7 +121,7 @@
                 </div>
               </div>
             </section>
-            <section class="four columns">
+            <section class="four columns" {hidePreview}>
               <div class="container">
                 <div class="row">
                   <h4>Latest output preview:</h4>
