--- a/FinalizeJob.html
+++ b/FinalizeJob.html
@@ -63,10 +63,11 @@
         </div>
         <div class="row">
           <form action="/confirmJob/{jobID}">
-              <input class="six columns button button-primary" type="submit" value="Confirm and enqueue job" />
+              <input class="five columns button button-primary" type="submit" value="Confirm and enqueue job" />
           </form>
+          <div class="two columns"></div>
           <form action="/cancelJob/{jobID}">
-              <input class="six columns button button" type="submit" value="Cancel job" />
+              <input class="five columns button button" type="submit" value="Cancel job" />
           </form>
         </div>
       </div>
