--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,16 @@
   </div>
   <div class="section">
     <div class="container">
-      <h4>Create new job:</h4>
+      <div class="row">
+        <h4 class="three columns"
+            aria-label="Create a new tongue segmentation job.
+              Once all jobs ahead in line are done, your job will automatically start.
+              You do not need to keep the browser window open - it will run independently."
+            data-balloon-pos="down"
+            data-balloon-length="large">
+          Create new job:
+        </h4>
+      </div>
       <form action="/finalizeJob" method="POST">
         <div class="row">
           <label class="three columns" for="jobName"
@@ -78,29 +87,25 @@
           </label>
           <input class="nine columns" type="text" id="maskSaveDirectory" name="maskSaveDirectory" value="">
         </div>
-        <div class="row"
-          <label>
-            <input class="one column" type="radio" id="windowsStyle" name="pathStyle" value="windowsStylePaths" checked>
-            <span class="label-body three columns"
+        <div class="row">
+            <label class="label-body three columns" for="windowsStyle"
                 aria-label="Are the paths you specified above formatted as a Windows path?
                   If you are running Windows, and you copy-pasted the path, choose this option."
                 data-balloon-pos="down"
                 data-balloon-length="fit">
               Windows-style paths
-            </span>
-          </label>
+            </label>
+            <input class="one column large-radio" type="radio" id="windowsStyle" name="pathStyle" value="windowsStylePaths" checked>
         </div>
-        <div class="row"
-          <label>
-            <input class="one column" type="radio" id="posixStyle" name="pathStyle" value="posixStylePaths">
-            <span class="label-body three columns"
-                aria-label="Are the paths you specified above formatted as a Mac/Linux path?
-                  If you are running Mac OS or Linux, and you copy-pasted the path, choose this option."
-                data-balloon-pos="down"
-                data-balloon-length="fit">
-              Mac/Linux-style paths
-            </span>
+        <div class="row">
+          <label class="label-body three columns" for="posixStyle"
+              aria-label="Are the paths you specified above formatted as a Mac/Linux path?
+                If you are running Mac OS or Linux, and you copy-pasted the path, choose this option."
+              data-balloon-pos="down"
+              data-balloon-length="fit">
+            Mac/Linux-style paths
           </label>
+          <input class="one column large-radio" type="radio" id="posixStyle" name="pathStyle" value="posixStylePaths">
         </div>
         <div class="row">
           <label class="three columns" class="six columns" for="topNetworkName"
@@ -170,14 +175,14 @@
           <input class="two columns" type="number" id="binaryThreshold" name="binaryThreshold" min="0" max="1" step="0.001" value="0.3">
         </div>
         <div class="row">
-          <label for="generatePreview"
+          <label class="three columns" for="generatePreview"
               aria-label="Should the server generate an animated gif preview of each mask as it gets made,
                 allowing you to see the results live in your browser? It adds a second or two of processing time per video, depending on the video sizes."
               data-balloon-pos="down"
               data-balloon-length="fit">
             Generate mask previews:
           </label>
-          <input type="checkbox" id="generatePreview" name="generatePreview" checked>
+          <input class="two columns large-checkbox" type="checkbox" id="generatePreview" name="generatePreview" checked>
         </div>
         <input class="button button-primary u-full-width" type="submit" value="Initialize job">
       </form>
