--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -100,7 +100,7 @@
               </div>
               <div class="row">
                 <div class="three columns">Auto-reload</div>
-                <input class="one column" style="width: 20px; height: 20px;" type="checkbox" id="reloadCheckbox" name="reloadCheckbox" checked>
+                <input class="one column large-checkbox" type="checkbox" id="reloadCheckbox" name="reloadCheckbox" checked>
               </div>
               <div class="row">
                 <form action="/cancelJob/{jobNum}" onsubmit="return confirmTerminate();">
