--- a/Index.html
+++ b/Index.html
@@ -177,7 +177,12 @@
           </label>
           <input class="two columns large-checkbox" type="checkbox" id="generatePreview" name="generatePreview" checked>
         </div>
-        <input class="button button-primary u-full-width" type="submit" value="Initialize job">
+        <div aria-label="Create the segmentation job with the specified parameters.
+              You will be asked to confirm the parameters before the job is enqueued."
+            data-balloon-pos="down"
+            data-balloon-length="fit">
+          <input class="button button-primary u-full-width" type="submit" value="Initialize job">
+        </div>
       </form>
     </div>
   </div>
