Added myJobs page, added defaults to options lists

--- a/Index.html
+++ b/Index.html
@@ -109,7 +109,7 @@
             Top neural network name:
           </label>
           <select class="nine columns" name="topNetworkName" id="topNetworkName">
-          {nopts}
+          {nopts_top}
           </select>
         </div>
         <div class="row">
@@ -121,7 +121,7 @@
             Bot neural network name:
           </label>
           <select class="nine columns" name="botNetworkName" id="botNetworkName">
-          {nopts}
+          {nopts_bot}
           </select>
         </div>
         <div class="row">
