--- a/NavBar.html
+++ b/NavBar.html
@@ -22,6 +22,7 @@
 <div class="navBar" id="mainNavBar">
   <a class="navBarElement" href="/">New job</a>
   <a class="navBarElement" href="/serverManagement">Server manager</a>
+  <a class="navBarElement" href="/myJobs">My jobs</a>
   <span class="navBarElement">User: {user}</span>
   <a class="navBarElement" href="." onclick="logout(); return false;">Change user</a>
   <a class="icon navBarElement" href="javascript:void(0);" onClick="openDrawerMenu()">&#9776;</a>
