--- a/Index.html
+++ b/Index.html
@@ -50,7 +50,7 @@
                 The directories must be accessible to the segmentation server (either on a local drive, or more likely, on a shared drive).
                 The root of this path will be replaced by the root you select above, so you don't have to worry about the drive letter or mount point.
                 The easiest way is to copy and paste the path to each directory as you see it on your computer.
-                Note that your masks will all go in one folder, even if you specify multiple folders."
+                Note that your masks will all go in one folder, even if you specify multiple video folders."
               data-balloon-pos="down"
               data-balloon-length="fit">
             Video root directories (one per line):
