Added change password functionality

--- a/NavBar.html
+++ b/NavBar.html
@@ -24,7 +24,8 @@
   <a class="navBarElement" href="/serverManagement">Server manager</a>
   <a class="navBarElement" href="/myJobs">My jobs</a>
   <span class="navBarElement">User: {user}</span>
-  <a class="navBarElement" href="." onclick="logout(); return false;">Change user</a>
+  <a class="navBarElement" href="." onclick="logout(); return false;">Switch user</a>
+  <a class="navBarElement" href="/changePassword">Change password</a>
   <a class="navBarElement" href="/help">Help</a>
   <a class="icon navBarElement" href="javascript:void(0);" onClick="openDrawerMenu()">&#9776;</a>
   <!--&#9776; is the code for the 3 line menu button-->
