--- a/HeadLinks.html
+++ b/HeadLinks.html
@@ -7,3 +7,9 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
 <link rel="manifest" href="/static/favicon/site.webmanifest">
+<script>
+  var message = "{message}";
+  if (message.length > 0) {{
+    alert(message);
+  }}
+</script>
