Changed server status to a span instead of a link

--- a/NavBar.html
+++ b/NavBar.html
@@ -27,7 +27,7 @@
   <a class="navBarElement" href="." onclick="logout(); return false;">Switch user</a>
   <a class="navBarElement" href="/changePassword">Change password</a>
   <a class="navBarElement" href="/help">Help</a>
-  <a class="navBarElement" href="" id="serverStatus">{serverStatus}</a>
+  <span class="navBarElement" id="serverStatus">{serverStatus}</span>
   <a class="icon navBarElement" href="javascript:void(0);" onClick="openDrawerMenu()">&#9776;</a>
   <!--&#9776; is the code for the 3 line menu button-->
 </div>
