Added "skipExisting" - parameter that makes job skip masks that already exist.

--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -88,6 +88,9 @@
                 <div class="three columns">Generate preview:</div><div class="nine columns"><strong>{generatePreview}</strong></div>
               </div>
               <div class="row">
+                <div class="three columns">Skip existing masks:</div><div class="nine columns"><strong>{skipExisting}</strong></div>
+              </div>
+              <div class="row">
                 <div class="three columns">Job state: </div><div class="nine columns"><strong>{jobStateName}</strong></div>
               </div>
               <div class="row">
