--- a/FinalizeJob.html
+++ b/FinalizeJob.html
@@ -56,6 +56,9 @@
           <div class="three columns">Generate mask previews:</div><div class="nine columns"><strong>{generatePreview}</strong></div>
         </div>
         <div class="row">
+          <div class="three columns">Skip existing masks:</div><div class="nine columns"><strong>{skipExisting}</strong></div>
+        </div>
+        <div class="row">
           <form action="/confirmJob/{jobID}">
               <input class="five columns button button-primary" type="submit" value="Confirm and enqueue job" />
           </form>
