--- a/Index.html
+++ b/Index.html
@@ -184,7 +184,7 @@
               data-balloon-length="fit">
             Skip existing masks?
           </label>
-          <input class="two columns large-checkbox" type="checkbox" id="skipExisting" name="skipExisting" checked>
+          <input class="two columns large-checkbox" type="checkbox" id="skipExisting" name="skipExisting">
         </div>
         <div aria-label="Create the segmentation job with the specified parameters.
               You will be asked to confirm the parameters before the job is enqueued."
