Adding mask width specification anywhere there is a height specification.

--- a/FinalizeJob.html
+++ b/FinalizeJob.html
@@ -47,7 +47,13 @@
           <div class="three columns">Top mask height:</div><div class="nine columns"><strong>{topHeight}</strong></div>
         </div>
         <div class="row">
+          <div class="three columns">Top mask width:</div><div class="nine columns"><strong>{topWidth}</strong></div>
+        </div>
+        <div class="row">
           <div class="three columns">Bottom mask height:</div><div class="nine columns"><strong>{botHeight}</strong></div>
+        </div>
+        <div class="row">
+          <div class="three columns">Bottom mask width:</div><div class="nine columns"><strong>{botWidth}</strong></div>
         </div>
         <div class="row">
           <div class="three columns">Binary mask threshold:</div><div class="nine columns"><strong>{binaryThreshold}</strong></div>
