--- a/Index.html
+++ b/Index.html
@@ -214,7 +214,7 @@
               You will be asked to confirm the parameters before the job is enqueued."
             data-balloon-pos="down"
             data-balloon-length="fit">
-          <input class="button button-primary u-full-width" type="submit" value="Initialize job">
+          <input class="button button-primary u-full-width" type="submit" value="Initialize segmentation job">
         </div>
       </form>
     </div>
