Finished refactoring FinalizeJob for clarity

--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
           Create new job:
         </h4>
       </div>
-      <form action="/finalizeJob" method="POST">
+      <form action="/finalizeSegmentationJob" method="POST">
         <div class="row">
           <label class="three columns" for="jobName"
               aria-label="Enter a name or description of job to make it easier to remember what's going on later."
