Refactoring naming and adding jobType attribute to ServerJob instances

--- a/Train.html
+++ b/Train.html
@@ -229,7 +229,7 @@
         </div>
 
         <div class="row">
-          <label class="three columns" for="generatePreview"
+          <label class="three columns" for="generateValidationPreview"
               aria-label="Should the server test the model and generate a segmentation image,
                 allowing you to see a sample of the training progress live in your browser?
                 It adds a bit of extra processing time."
@@ -237,7 +237,7 @@
               data-balloon-length="fit">
             Generate inter-epoch validation preview?
           </label>
-          <input class="two columns large-checkbox" type="checkbox" id="generatePreview" name="generatePreview" checked>
+          <input class="two columns large-checkbox" type="checkbox" id="generateValidationPreview" name="generateValidationPreview" checked>
         </div>
         <div aria-label="Create the network training job with the specified parameters.
               You will be asked to confirm the parameters before the job is enqueued."
