--- a/FinalizeSegmentationJob.html
+++ b/FinalizeSegmentationJob.html
@@ -7,7 +7,7 @@
     <div class="section">
       <div class="container">
         <h1 class="section-heading">
-          Finalize job
+          Finalize segmentation job
         </h1>
       </div>
     </div>
