--- a/Train.html
+++ b/Train.html
@@ -2,12 +2,9 @@
 <head>
   {headLinksHTML}
   <script>
-    function updateAugmentParamVisibility() {{
-      if (document.getElementById('augmentData').checked) {{
-        document.getElementById('augmentParams').style.display = 'block';
-      }} else {{
-        document.getElementById('augmentParams').style.display = 'none';
-      }}
+    function updateAugmentParamVisibility(augmentCheck) {{
+        var augmentParams = document.getElementById("augmentParams");
+        augmentParams.style.display = aumentCheck.checked ? "block" : "none";
     }}
   </script>
 </head>
@@ -143,10 +140,10 @@
               data-balloon-length="fit">
             Randomly augment training data?
           </label>
-          <input class="two columns large-checkbox" type="checkbox" id="augmentData" name="augmentData" checked>
+          <input class="two columns large-checkbox" type="checkbox" id="augmentData" name="augmentData" onclick="updateAugmentParamVisibility(this)" checked>
         </div>
 
-        <div id="augmentParams", onclick="updateAugmentParamVisibility">
+        <div id="augmentParams">
           <div class="row">
             <div class="one column"></div>
             <label class="three columns" for="rotationRange"
