--- a/Train.html
+++ b/Train.html
@@ -4,7 +4,7 @@
   <script>
     function updateAugmentParamVisibility(augmentCheck) {{
         var augmentParams = document.getElementById("augmentParams");
-        augmentParams.style.display = aumentCheck.checked ? "block" : "none";
+        augmentParams.style.display = augmentCheck.checked ? "block" : "none";
     }}
   </script>
 </head>
