--- a/NavBar.html
+++ b/NavBar.html
@@ -20,7 +20,8 @@
   }}
 </script>
 <div class="navBar" id="mainNavBar">
-  <a class="navBarElement" href="/">New job</a>
+  <a class="navBarElement" href="/">New seg job</a>
+  <a class="navBarElement" href="/train">New train job</a>
   <a class="navBarElement" href="/serverManagement">Server manager</a>
   <a class="navBarElement" href="/myJobs">My jobs</a>
   <span class="navBarElement">User: {user}</span>
