Continued adding network management tools

--- a/FinalizeTrainJob.html
+++ b/FinalizeTrainJob.html
@@ -20,7 +20,7 @@
         </div>
         <div class="row">
           <div class='twelve columns'>
-            Please review the following job specifications and confirm if correct:
+            Please review the following training job specifications and confirm if correct:
           </div>
         </div>
         <div class="row">
