--- a/ServerManagement.html
+++ b/ServerManagement.html
@@ -11,11 +11,11 @@
       }}
 
       function confirmTerminate(jobNum) {{
-        var reallyTerminate = confirm("Are you sure you want to terminate job #"+jobNum+"? Completed masks will remain. Click 'Ok' to terminate, 'Cancel' to allow job to continue.")
+        var reallyTerminate = confirm("Are you sure you want to terminate job #"+jobNum+"? Completed masks will remain. Click 'Ok' to terminate, 'Cancel' to allow job to continue.");
         return reallyTerminate;
       }}
       function confirmRestart() {{
-        var reallyRestart = confirm("Are you sure you want to restart the server? This will wipe out all jobs. Completed masks will remain. Click 'Ok' to restart, 'Cancel' to allow job to continue.")
+        var reallyRestart = confirm("Are you sure you want to restart the server? This will wipe out all jobs. Completed masks will remain. Click 'Ok' to restart, 'Cancel' to allow job to continue.");
         return reallyRestart;
       }}
     </script>
