Adapted ServerManagement to handle either train or segment jobs

--- a/html/ServerManagement.html
+++ b/html/ServerManagement.html
@@ -43,9 +43,10 @@
             <tr>
               <th>Job #</th>
               <th>Job name</th>
+              <th>Job type</th>
               <th>Job owner</th>
               <th>% complete</th>
-              <th># videos</th>
+              <th># tasks</th>
               <th>Confirmed?</th>
               <th>Cancelled?</th>
               <th>State</th>
