--- a/html/ServerManagementTableRowTemplate.html
+++ b/html/ServerManagementTableRowTemplate.html
@@ -6,13 +6,16 @@
     {jobDescription}
   </td>
   <td>
+    {jobType}
+  </td>
+  <td>
     {owner}
   </td>
   <td>
     {percentComplete} %
   </td>
   <td>
-    {numVideos}
+    {numTasks}
   </td>
   <td>
     {confirmed}
