Fixed MyJobs page so it can handle multiple job types

--- a/html/MyJobs.html
+++ b/html/MyJobs.html
@@ -28,8 +28,9 @@
             <tr>
               <th>Job #</th>
               <th>Job name</th>
+              <th>Job type</th>
               <th>% complete</th>
-              <th># videos</th>
+              <th># tasks</th>
               <th>State</th>
               <th>Check progress</th>
               <th>Terminate job</th>
