Separating check progress page one for each job type.

--- a/html/CheckTrainProgress.html
+++ b/html/CheckTrainProgress.html
@@ -26,7 +26,7 @@
       {navBarHTML}
       <div class="section">
         <div class="container">
-          <h1>Job Progress</h1>
+          <h1>Train Job Progress</h1>
           <h2>Job {jobNum} {exitCodePhrase}</h2>
           <h4>{stateDescription}</h4>
         </div>
