--- a/html/FinalizeTrainJob.html
+++ b/html/FinalizeTrainJob.html
@@ -77,8 +77,8 @@
     </div>
   </body>
   <script>
-    if ({augmentData} == 'No') {
+    if ({augmentData} == 'No') {{
       document.getElementByID('augmentationParameters').display = 'none';
-    }
+    }}
   </script>
 </html>
