--- a/html/Train.html
+++ b/html/Train.html
@@ -26,7 +26,7 @@
               You do not need to keep the browser window open - it will run independently."
             data-balloon-pos="down"
             data-balloon-length="large">
-          Create new job:
+          Create new network training job:
         </h4>
       </div>
       <form action="/finalizeTrainJob" method="POST">
@@ -155,7 +155,7 @@
                 data-balloon-length="fit">
               Rotation range:
             </label>
-            <input class="two columns" type="number" id="rotationRange" name="rotationRange" min="0" max="360" step="0.001" value="">
+            <input class="two columns" type="number" id="rotationRange" name="rotationRange" min="0" max="360" step="0.001" value="0">
           </div>
           <div class="row">
             <div class="one column"></div>
