Minor cosmetic changes to job creation pages

--- a/html/Index.html
+++ b/html/Index.html
@@ -14,13 +14,13 @@
   <div class="section">
     <div class="container">
       <div class="row">
-        <h4 class="three columns"
+        <h4 class="nine columns"
             aria-label="Create a new tongue segmentation job.
               Once all jobs ahead in line are done, your job will automatically start.
               You do not need to keep the browser window open - it will run independently."
             data-balloon-pos="down"
             data-balloon-length="large">
-          Create new job:
+          Create new segmentation job:
         </h4>
       </div>
       <form action="/finalizeSegmentationJob" method="POST">
